@@ -537,6 +537,10 @@
       on \code{list}s (instead of string coercion).  Consequently
       \code{unique()} is better distinguishing data frame rows, fixing
       \PR{17369} and \PR{17381}.
+
+      \item Calling \code{names()} on an S4 object derived from
+      \code{"environment"} behaves (by default) like calling
+      \code{names()} on an ordinary environment.
     }
   }
 }
